[metadata]
name = tower
version = 0.0.1
description = Defense Tower Game Clone
log_description = file: README.md
license = MIT?
classifiers = Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    click==8.*
    pygame==2.*
    structlog

[options.package_data]
tower.assets.gfx = *.png
tower.assets.audio = *.wav, *.ogg
tower.assets.levels = *.json

[options.entry_points]
console_scripts = tower = tower.main:main