[metadata]
name = tower
version = attr: tower.VERSION
description = Defense Tower Game Clone
long_description = file: README.md, LICENSE.txt
license = Copyright (C) 2022 Inspired Python. All Rights Reserved.  # TODO: review this license
classifiers = Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
python_requires = >= 3.8
install_requires =
    click==8.*
    pygame==2.*
    structlog

[options.package_data]
tower.assets.gfx = *.png
tower.assets.audio = *.wav, *.ogg
tower.assets.levels = *.json

[options.entry_points]
console_scripts = tower = tower.main:main

[options.extras_require]

dev =
   flake8
   pylint